[tool.poetry]
name = "casni"
version = "0.0.1"
description = "Containerized App Scheduler for NeuroImaging"
authors = ["SungHo Lee <shlee@unc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
